# cognis-connect

./: CHANGELOG.md  INTEROP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cognis_connect/: __init__.py  cli.py  edgemesh.py  findings.py  misp.py  notify.py  siem.py  sigma.py  stix.py  transport.py
examples/: help.txt  version.txt
tests/: test_connect.py
