[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-connect"
version = "0.1.0"
description = "Integration SDK for the Cognis suite — one Finding contract, adapters to STIX/TAXII, MISP, Sigma, Splunk, Elastic, Slack/Discord, webhooks, and the edgemesh /v1 fleet"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LicenseRef-COCL-1.0" }
authors = [{ name = "Cognis Digital LLC" }]
keywords = ["integration", "stix", "taxii", "misp", "sigma", "splunk", "elastic",
            "siem", "slack", "webhook", "threat-intel", "soar", "openai", "edgemesh",
            "interoperability", "osint", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []                      # pure standard library

[project.urls]
Homepage = "https://github.com/cognis-digital/cognis-connect"

[project.scripts]
cognis-connect = "cognis_connect.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]
